# JobApplicationHelper

./: .env_example  README.md  packages.txt  pyproject.toml
input/: candidate_cv.txt  cover_letter_sample.txt
src/: app.py  llms.py
